Fix line break on supplement (#1287)

--- a/supplements/static/pls/css/pls.css
+++ b/supplements/static/pls/css/pls.css
@@ -442,3 +442,7 @@
   max-height: 550px;
   overflow: auto;
 }
+
+.form-group .chosen-container {
+  width: 100% !important; /* overlap plugin css code */
+}
